実績とか追加

--- a/index.html
+++ b/index.html
@@ -20,9 +20,15 @@
 
         .content {
             padding: 20px;
+            display: flex;
+            flex-wrap: wrap;
         }
 
-        .content h2, .content p {
+        .content .left, .content .right {
+            flex: 1;
+        }
+
+        .content h3, .content p {
             margin: 0 0 15px 0;
         }
 
@@ -31,8 +37,7 @@
             color: #fff;
             text-align: center;
             padding: 10px 0;
-            position: absolute;
-            bottom: 0;
+            position: relative;
             width: 100%;
         }
     </style>
@@ -43,25 +48,59 @@
 </div>
 
 <div class="content">
-    <h2>業務内容</h2>
-    <p>ソフトウェア開発</p>
+    <div class="left">
+        <h3>業務内容</h3>
+        <p>ソフトウェア開発</p>
 
-    <h2>代表社員</h2>
-    <p>石井彰</p>
+        <h3>代表社員</h3>
+        <p>石井彰</p>
 
-    <h2>所在地</h2>
-    <p>〒150-0002</p>
-    <p>東京都渋谷区渋谷2-19-15宮益坂ビルディング609</p>
+        <h3>所在地</h3>
+        <p>〒150-0002</p>
+        <p>東京都渋谷区渋谷2-19-15宮益坂ビルディング609</p>
 
-    <h2>連絡先</h2>
-    <p>ishii.system.tech@gmail.com</p>
+        <h3>連絡先</h3>
+        <p>ishii.system.tech@gmail.com</p>
 
-    <h2>リンク</h2>
-    <a href="https://github.com/AI1411">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-            <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
-        </svg>
-    </a>
+        <h3>リンク</h3>
+        <a href="https://github.com/AI1411">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+            </svg>
+        </a>
+    </div>
+
+    <div class="right">
+        <h3>開発実績(最新順)</h3>
+        <ul>
+            <li>ガソリンスタンドアプリの新規開発</li>
+            <li>SNS管理アプリのリプレイス</li>
+            <li>クーポン機能の新規開発</li>
+            <li>大手スーパーECサイト新規開発</li>
+            <li>派遣のポータルサイトのリプレイス</li>
+            <li>口コミサイトの新規開発</li>
+        </ul>
+
+        <h3>使用言語</h3>
+        <ul>
+            <li>Go言語</li>
+            <li>Rust</li>
+            <li>PHP</li>
+            <li>JavaScript</li>
+            <li>TypeScript</li>
+        </ul>
+
+        <h3>使用フレームワーク・ライブラリ</h3>
+        <ul>
+            <li>Gin</li>
+            <li>gRPC</li>
+            <li>Laravel</li>
+            <li>React</li>
+            <li>Vue</li>
+            <li>Next.js</li>
+            <li>Nuxt.js</li>
+        </ul>
+    </div>
 </div>
 
 <div class="footer">
