--- a/index.html
+++ b/index.html
@@ -2,109 +2,246 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>合同会社石井システム</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        :root {
+            --primary: #2d3436;
+            --secondary: #0984e3;
+            --background: #f5f6fa;
+            --text: #2d3436;
+            --card-bg: #ffffff;
+        }
+
+        * {
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            background-color: var(--background);
+            color: var(--text);
+            line-height: 1.6;
         }
 
         .header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
+            background: linear-gradient(135deg, var(--primary), var(--secondary));
+            color: white;
+            padding: 50px 0 30px;
             text-align: center;
+            clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        }
+
+        .header h1 {
+            font-size: 2.5em;
+            margin-bottom: 10px;
+            letter-spacing: 2px;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
         }
 
         .content {
-            padding: 20px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 30px;
+            padding: 60px 0;
+        }
+
+        .card {
+            background: var(--card-bg);
+            border-radius: 15px;
+            padding: 30px;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .card:hover {
+            transform: translateY(-5px);
+        }
+
+        h3 {
+            color: var(--secondary);
+            margin-bottom: 20px;
+            font-size: 1.5em;
+            position: relative;
+            padding-bottom: 10px;
+        }
+
+        h3::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 50px;
+            height: 3px;
+            background: var(--secondary);
+            border-radius: 3px;
+        }
+
+        ul {
+            list-style: none;
+        }
+
+        li {
+            margin-bottom: 15px;
+            padding-left: 20px;
+            position: relative;
+        }
+
+        li::before {
+            content: '•';
+            color: var(--secondary);
+            position: absolute;
+            left: 0;
+        }
+
+        .contact-info {
             display: flex;
-            flex-wrap: wrap;
+            align-items: center;
+            margin-bottom: 15px;
         }
 
-        .content .left, .content .right {
-            flex: 1;
+        .github-link {
+            display: inline-flex;
+            align-items: center;
+            color: var(--primary);
+            text-decoration: none;
+            transition: transform 0.3s ease;
         }
 
-        .content h3, .content p {
-            margin: 0 0 15px 0;
+        .github-link:hover {
+            transform: scale(1.1);
+        }
+
+        .github-link svg {
+            margin-right: 10px;
         }
 
         .footer {
-            background-color: #333;
-            color: #fff;
+            background: linear-gradient(135deg, var(--primary), var(--secondary));
+            color: white;
             text-align: center;
-            padding: 10px 0;
-            position: relative;
-            width: 100%;
+            padding: 20px 0;
+            margin-top: 60px;
+        }
+
+        .fade-up {
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 0.6s ease, transform 0.6s ease;
+        }
+
+        .fade-up.visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        @media (max-width: 768px) {
+            .header {
+                padding: 30px 0 20px;
+            }
+
+            .header h1 {
+                font-size: 1.25em;
+            }
+
+            .content {
+                grid-template-columns: 1fr;
+            }
+
+            .card {
+                margin-bottom: 20px;
+            }
         }
     </style>
 </head>
 <body>
-<div class="header">
-    <h1>合同会社石井システム</h1>
-</div>
-
-<div class="content">
-    <div class="left">
-        <h3>業務内容</h3>
-        <p>ソフトウェア開発</p>
-
-        <h3>代表社員</h3>
-        <p>石井彰</p>
-
-        <h3>所在地</h3>
-        <p>〒150-0002</p>
-        <p>東京都渋谷区渋谷2-19-15宮益坂ビルディング609</p>
-
-        <h3>連絡先</h3>
-        <p>ishii.system.tech@gmail.com</p>
-
-        <h3>リンク</h3>
-        <a href="https://github.com/AI1411">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
-            </svg>
-        </a>
+<header class="header">
+    <div class="container">
+        <h1 data-aos="fade-down">合同会社石井システム</h1>
     </div>
+</header>
 
-    <div class="right">
-        <h3>開発実績(最新順)</h3>
-        <ul>
-            <li>ガソリンスタンドアプリの新規開発</li>
-            <li>SNS管理アプリのリプレイス</li>
-            <li>クーポン機能の新規開発</li>
-            <li>大手スーパーECサイト新規開発</li>
-            <li>派遣のポータルサイトのリプレイス</li>
-            <li>口コミサイトの新規開発</li>
-        </ul>
+<div class="container">
+    <div class="content">
+        <div class="card" data-aos="fade-up">
+            <h3>企業情報</h3>
+            <div class="contact-info">
+                <p><strong>代表社員:</strong> 石井彰</p>
+            </div>
+            <div class="contact-info">
+                <p><strong>所在地:</strong><br>
+                    〒299-4333<br>
+                    千葉県長生郡長生村七井土１５６６−５</p>
+            </div>
+            <div class="contact-info">
+                <p><strong>メール:</strong> ishii.system.tech@gmail.com</p>
+            </div>
+            <a href="https://github.com/AI1411" class="github-link">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <path fill="currentColor" d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                </svg>
+                GitHub
+            </a>
+        </div>
 
-        <h3>使用言語</h3>
-        <ul>
-            <li>Go言語</li>
-            <li>Rust</li>
-            <li>PHP</li>
-            <li>JavaScript</li>
-            <li>TypeScript</li>
-        </ul>
+        <div class="card" data-aos="fade-up" data-aos-delay="100">
+            <h3>開発実績</h3>
+            <ul>
+                <li>銀行向けのポータルサイトのリプレイス</li>
+                <li>ガソリンスタンドアプリの新規開発</li>
+                <li>SNS管理アプリのリプレイス</li>
+                <li>クーポン機能の新規開発</li>
+                <li>大手スーパーECサイト新規開発</li>
+                <li>派遣のポータルサイトのリプレイス</li>
+                <li>口コミサイトの新規開発</li>
+            </ul>
+        </div>
 
-        <h3>使用フレームワーク・ライブラリ</h3>
-        <ul>
-            <li>Gin</li>
-            <li>gRPC</li>
-            <li>Laravel</li>
-            <li>React</li>
-            <li>Vue</li>
-            <li>Next.js</li>
-            <li>Nuxt.js</li>
-        </ul>
+        <div class="card" data-aos="fade-up" data-aos-delay="200">
+            <h3>技術スタック</h3>
+            <h4 style="color: var(--primary); margin: 15px 0 10px;">言語</h4>
+            <ul>
+                <li>Go言語</li>
+                <li>Rust</li>
+                <li>PHP</li>
+                <li>JavaScript</li>
+                <li>TypeScript</li>
+            </ul>
+            <h4 style="color: var(--primary); margin: 15px 0 10px;">フレームワーク・ライブラリ</h4>
+            <ul>
+                <li>Gin</li>
+                <li>Echo</li>
+                <li>gRPC</li>
+                <li>Laravel</li>
+                <li>React</li>
+                <li>Vue</li>
+                <li>Next.js</li>
+                <li>Nuxt.js</li>
+            </ul>
+        </div>
     </div>
 </div>
 
-<div class="footer">
-    <p>&copy; 2023 合同会社石井システム</p>
-</div>
+<footer class="footer">
+    <div class="container">
+        <p>&copy; 2024 合同会社石井システム</p>
+    </div>
+</footer>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+<script>
+  AOS.init({
+    duration: 800,
+    once: true
+  });
+</script>
 </body>
 </html>
