--- a/index.html
+++ b/index.html
@@ -245,24 +245,24 @@
         </div>
 
         <div class="card" data-aos="fade-up" data-aos-delay="200" style="grid-column: 1 / -1;">
-            <h3>技術スタック(経験年数)</h3>
+            <h3>技術スタック</h3>
             <h4 style="color: var(--primary); margin: 15px 0 10px;">言語</h4>
             <ul>
-                <li>Go言語(4年)</li>
-                <li>PHP(2年)</li>
-                <li>JavaScript(6年)</li>
-                <li>TypeScript(4年)</li>
+                <li>Go言語</li>
+                <li>PHP</li>
+                <li>JavaScript</li>
+                <li>TypeScript</li>
             </ul>
             <h4 style="color: var(--primary); margin: 15px 0 10px;">フレームワーク・ライブラリ</h4>
             <ul>
-                <li>Gin(2年)</li>
-                <li>Echo(2年)</li>
-                <li>gRPC(1年)</li>
-                <li>Laravel(2年)</li>
-                <li>React(3年)</li>
-                <li>Vue(3年)</li>
-                <li>Next.js(1年)</li>
-                <li>Nuxt.js(3年)</li>
+                <li>Gin</li>
+                <li>Echo</li>
+                <li>gRPC</li>
+                <li>Laravel</li>
+                <li>React</li>
+                <li>Vue</li>
+                <li>Next.js</li>
+                <li>Nuxt.js</li>
             </ul>
         </div>
 
